# UniRebuild

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml
src/unirebuild/: __init__.py  constants.py  context.py  core.py
src/unirebuild/ios/: cgbi.py  plist.py
src/unirebuild/steps/: __init__.py  apply_patches.py  base.py  copy_bundles.py  copy_gitignore.py  copy_obb.py  copy_overrides.py  custom_action.py  decode_fsb_audio.py  deduplicate_assets.py  delete_assets.py  extract_app.py  extract_app_icon.py  fix_asset_bundles.py  generate_deterministic_guids.py  git_commit.py  git_init.py  populate_texture_settings.py  reapply_patches.py  rebuild_patches.py  recover_spritemask_layers.py  reencode_wavs.py  run_assetripper.py  swap_files.py  unity_upgrade.py
