[project]
name = "unirebuild"
version = "0.0.2"
description = "A modular framework for patching Unity games."
readme = "README.md"
authors = [
    { name = "Nuutti", email = "snuutti@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "colorlog>=6.10.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
